# uzu2

./: '  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CMakeSettings.json.template  INSTALL-MSVC.md  README.md  asset_table  asset_table_test.c  demon_ruin.tmx  gmon.out  map2.tmx  t.c  test.c
cmake/: CompilerWarnings.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake
doc/: abbreviation  coding_convention.md  luabinding.md  luabinding.md.html
include/: array.h  assert_manager.h  components.h  config.h  constances.h  ecs.h  engine.h  entity.h  entity_factory.h  equipment.h  equipment_system.h  font_loader.h  gameconf.h  global.h  graphics.h  input.h  inventory.h  item.h  json_helper.h  level_loader.h  main.h  map.h  map_render.h  message.h  particle_system.h  raycast.h  read_all.h  resources.h  scn_main.h  script.h  string_utils.h  system_logic.h  system_render.h  text_format.h  toolbox.h
include/graphics/: animation.h  asset_table.h  batch.h  font.h  framebuffer.h  gl.h  light.h  material.h  renderer.h  sprite_renderer.h  sprite_sheet.h  text.h  text_renderer.h  types.h  vertex_buffer.h  view.h
include/toolbox/: common.h  event.h  hash_table.h  log.h  memory.h  ptrarray.h  quad_tree.h  rtree.h  signal.h
include/ui/: equipment.h  hud.h  inventory.h  menu.h
res/: jobs.json  spritesheet.json  test.lua  untitled.tsx
res/conversation/: demo1.json  demo2.json  demo3.json  nova_00.json  nova_01.json  nova_02.json  nova_1A_1.json  nova_2A_1.json  rescue_brian_3.json
res/level/: 0.json  1.json  central.json  corridor.json  demon_ruin.json  gl_test.json  gl_test.tmx  level0.json  map1.tmx  test.json
res/shader/: default.frag  default.vert  invertColor.frag  light_shader.frag  sprite.frag  sprite.vert  text.frag  text.vert  tile.frag  tile.vert
src/: CMakeLists.txt  asset_manager.c  component.c  constances.c  engine.c  enitity_factory.c  entity.c  equipment.c  font_loader.c  input.c  inventory.c  item.c  json_helper.c  level_loader.c  main.c  map.c  map_render.c  message.c  precompiled.h  raycast.c  read_all.c  resources.c  scn_main.c  scn_select_character.c  scn_title.c  script.c  script.h  string_utils.c  system_logic.h  text_format.c
src/ecs/: CMakeLists.txt  ecs_group.c  ecs_pool.c  ecs_priv.h  ecs_registry.c  ecs_signal.c  ecs_view.c
src/graphics/: anim.c  animation.c  asset_table.c  batch.c  font.c  framebuffer.c  light.c  material.c  render.c  renderer.c  shader.c  sprite_renderer.c  sprite_sheet.c  text.c  text_renderer.c  texture.c  vertex_buffer.c  view.c
src/system/: CMakeLists.txt  affine_animation.c  box_collision.c  camera.c  collision_manager.c  equipment.c  find_closest_interacable_entity.c  interactable_entity.c  stats.c  swing_weapon.c  tile_collision.c
src/system/logic/: controller.c  input.c  motion.c  rotation.c  tag.c
src/system/render/: anim.c  character_animation.c  sprite.c  text.c  transform.c
src/toolbox/: CMakeLists.txt  event.c  hash_table.c  ptrarray.c  quad_tree.c  rtree.c  signal.c
src/ui/: equipment.c  hub.c  inventory.c  menu.c
tests/: CMakeLists.txt  check_main.c
tests/asset_table/: CMakeLists.txt  asset_table_test.c
tests/ecs/: CMakeLists.txt
tests/example_test/: CMakeLists.txt  example.c
todo/: scripting-api.md
